@@ -177,7 +177,7 @@ CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 #CONF.DEBUG_MONITOR_ON = true
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
 ##CONF.DEBUG_BUG49 = false
-#CONF.DEBUG_BUG49 = true
+CONF.DEBUG_BUG49 = true
 
 ##CONF.PROCESS_LIFE_MANAGE_INTERVAL = nil
 #CONF.PROCESS_LIFE_MANAGE_INTERVAL = 60
