@@ -37,8 +37,8 @@ module Fairy
 	backend.each_node do |node|
 	  node.start_export
 	  import = Import.new(policy)
-	  import.set_log_callback do |n| 
-	    Log::verbose(self, "IMPORT POP: #{n}")
+	  import.set_log_callback do |n, key| 
+	    Log::verbose(self, "IMPORT POP key=#{key}: #{n}")
 	  end
 	  import.no_import = 1
 	  node.export.output = import
