@@ -9,7 +9,7 @@ module Fairy
 
 #    DeepConnect.def_single_method_spec(self, "REF new(REF, REF, VAL, VAL)")
 
-    def initialize(processor, bjob, opts, block_source)
+    def initialize(id, ntask, bjob, opts, block_source)
       super
       @block_source = block_source
 #      @map_proc = eval("proc{#{@block_source}}", TOPLEVEL_BINDING)
