@@ -7,7 +7,7 @@ module Fairy
   class NIdentity<NSingleExportFilter
     Processor.def_export self
 
-    def initialize(processor, bjob, opts=nil)
+    def initialize(id, ntask, bjob, opts=nil)
       super
     end
 
