@@ -6,7 +6,7 @@ module Fairy
   class NIota<NSingleExportInput
     Processor.def_export self
 
-    def initialize(processor, bjob, opts)
+    def initialize(id, ntask, bjob, opts)
       super
     end
 
