@@ -7,7 +7,7 @@ module Fairy
   class NJoin<NSingleExportFilter
     Processor.def_export self
 
-    def initialize(processor, bjob, opts, block_source)
+    def initialize(id, ntask, bjob, opts, block_source)
       super
       @block_source = block_source
 
@@ -35,8 +35,8 @@ module Fairy
 	    import = Import.new(policy)
 	    import.no = jinput.no
 	    import.add_key(jinput.key)
-	    import.set_log_callback do |n| 
-	      Log::verbose(self, "IMPORT POP: #{n}")
+	    import.set_log_callback do |n, key| 
+	      Log::verbose(self, "IMPORT POP key=#{key}: #{n}")
 	    end
 
 	    import
