@@ -7,7 +7,7 @@ module Fairy
   class NModGroupBy<NGroupBy
     Processor.def_export self
 
-    def initialize(processor, bjob, opts, block_source)
+    def initialize(id, ntask, bjob, opts, block_source)
       super
       
       @mod = opts[:n_mod_group_by] 
@@ -29,7 +29,7 @@ module Fairy
     class NPostFilter<NSingleExportFilter
       Processor.def_export self
 
-      def initialize(processor, bjob, opts, block_source)
+      def initialize(id, ntask, bjob, opts, block_source)
 	super
 	@block_source = block_source
 
