@@ -8,7 +8,7 @@ module Fairy
 
 #    DeepConnect.def_single_method_spec(self, "REF new(REF, VAL, VAL)")
 
-    def initialize(processor, bjob, opts, n)
+    def initialize(id, ntask, bjob, opts, n)
       super
       @no_split = n
 
